"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2009-02-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-94-b:
	  Source-dir only tag: perm'd PRSIM_INDIRECT_EXPRESSION_MAP, 
		which originated from the first round of scalability
		work that made use of hierarchical process graphs, 
		separated from process atate.  


	* HACKT-00-01-04-main-00-82-94:
	  Cleaning up prsim source: factored out unique_process_subgraph
		and process_sim_state into separate modules.  
		Next: perm-ing some flags.  


2009-02-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-93:
	  prsim, chpsim: added 'repeat' command to repeat a command a
		fixed number of times.  Minimally tested, documented.  


2009-01-31	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-92-merged-prsim-12-09:
	  Merged prsim tracing branch.  We can now record trace files for
		every event in hacprsim, to be used for further analysis.
		minor fixes to autosave, improved documentation, new
		test support for trace files.  
		prsim, chpsim: new -r option to startup with new trace file.
	  Next branch for prsim will be for guile API development.


2009-01-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-90-prsim-12-09:
	  prsim trace files now contain initial state and final state
		checkpoints, just array of node values.
		This is needed in case tracing starts with non-X values.
		The final state just makes it easier to play the simulation
		in reverse without additional work.
		Tests updated accordingly.  
	  Idea: could intersperse checkpoints periodically for 
		random jumps in trace history.
	  Closing branch, leave trace compaction for later.


	* HACKT-00-01-04-main-00-82-90-prsim-12-08:
	  No source revision, test infrastructure updates, and added