@@ -5,6 +5,10 @@
 
 2009-02-06	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-82-94-c:
+	  Source-dir only tag: perm'd PRSIM_RULE_DIRECTION.
+
+
 	* HACKT-00-01-04-main-00-82-94-b:
 	  Source-dir only tag: perm'd PRSIM_INDIRECT_EXPRESSION_MAP, 
 		which originated from the first round of scalability
